div/absa-ac-dev/resources/absa-ac-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: absa-ac-dev
  namespace: absa-ac-dev
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: consolidated-gateway
      namespace: gateway
  hostnames:
    - absa-ac-dev.k8s.example.com
    - absa-ac-dev.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: absa-ac-dev
          port: 8080
